check test case

--- a/ExamDemoIOS/ExamDemo.xcodeproj/xcshareddata/xcschemes/ExamDemo.xcscheme
+++ b/ExamDemoIOS/ExamDemo.xcodeproj/xcshareddata/xcschemes/ExamDemo.xcscheme
@@ -37,6 +37,11 @@
                BlueprintName = "TestExamDemo"
                ReferencedContainer = "container:ExamDemo.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "TestExamDemo">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
